--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html> <html>
+<body>
+    <h1>lasagna</h1>
+<img src="https://static.toiimg.com/thumb/55369113.cms?width=1200&height=900" alt="Lasagna">
+<h2>How to make the best Lasagna</h2>
+<p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
+<p>
+    Ingredients
+    <ul>
+        <li>extra virgin olive oil</li>
+        <li>italian sausage</li>
+        <li>onion (diced)</li>
+        <li>garlic</li>
+        <li>tomato sauce</li>
+        <li>tomato paste</li>
+        <li>crushed tomatoes</li>
+        <li>oregano</li>
+        <li>parsley</li>
+        <li>garlic powder</li>
+        <li>lasagna noodles</li>
+        <li>ricotta cheese</li>
+        <li>mozzarella cheese</li>
+        <li>parmesan cheese</li>
+    </ul>
+</p>
+<p>
+    Steps
+    <ol>
+        <li>boil pasta</li>
+        <li>brown sausage</li>
+        <li>cook onion and garlic in the rendered sausage fat</li>
+        <li>combine sausage with garlic, onion, and tomato paste/sauce/crushed </li>
+        <li>preheat oven to 375F</li>
+        <li>add layer of sauce followed by layer of pasta and a layer of parmesan cheese</li>
+        <li>repeat last step till container is full</li>
+        <li>on the final layer add ricotta cheese</li>
+        <li>bake for 45 minutes</li>
+        <li>cool and serve</li>
+    </ol>
+</p>
+</body>
+</html>
